# cookiecutter-docker-django

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  Procfile  README.md  docker-compose.ci.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/accounts/: admin.py  models.py
{{cookiecutter.project_slug}}/accounts/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/settings/: common.py  dev.py
