[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "*"
django-environ = "*"
django-extensions = "*"
django-model-utils = "*"
psycopg2-binary = "*"
gunicorn = "*"
coverage = "*"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"
flake8 = "*"
flake8-django = "*"
pre-commit = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
